# smart-report-extractor-logos-labs

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  REFLECTION.md  docker-compose.yml  vercel.json
api/: index.py  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py  error_handlers.py
backend/app/api/routes/: extract.py  health.py
backend/app/application/: extract_report.py
backend/app/domain/: errors.py  exceptions.py  models.py  ports.py
backend/app/infrastructure/classification/: domain_gate.py  report_classifier.py  rules.py  stubs.py
backend/app/infrastructure/extractors/: cbc.py  composite.py  discharge_summary.py  ecg.py  health_checkup.py  patterns.py  prescription.py  stubs.py
backend/app/infrastructure/llm/: factory.py  gemini.py  stubs.py
backend/app/infrastructure/ocr/: fallback.py  gemini_ocr.py  page_images.py  tesseract_extractor.py
backend/app/infrastructure/pdf/: factory.py  stubs.py  text_extractor.py
backend/app/infrastructure/storage/: in_memory.py
backend/tests/: conftest.py  test_api_extract.py  test_classification.py  test_extract_validation.py  test_field_extractors.py  test_health.py  test_text_extraction.py
backend/tests/fixtures/: sample_text.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ErrorDisplay.tsx  ExtractionResults.tsx  ReportExtractor.tsx  UploadZone.tsx  WarningsBanner.tsx
frontend/src/lib/: api.ts
